[gd_scene load_steps=5 format=3 uid="uid://di5mdkrbj68hg"]

[ext_resource type="Script" uid="uid://chivn5nf6ih6m" path="res://ui/LevelCard.gd" id="1_fc17k"]
[ext_resource type="Texture2D" uid="uid://d3gr4lah4uk0g" path="res://addons/kenneyUI/PNG/Green/Default/arrow_basic_e.png" id="1_w8aqe"]

[sub_resource type="Theme" id="Theme_fc17k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ciwbg"]
bg_color = Color(0.321728, 0.321728, 0.321728, 1)

[node name="LevelCard" type="Control"]
custom_minimum_size = Vector2(350, 425)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1570.0
offset_bottom = -640.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fc17k")
script = ExtResource("1_fc17k")

[node name="Card" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ciwbg")

[node name="Margin" type="MarginContainer" parent="Card"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Card/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Header" type="Panel" parent="Card/Margin/VBox"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="Card/Margin/VBox/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -11.5
offset_right = 27.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviewWrap" type="Control" parent="Card/Margin/VBox"]
clip_contents = true
custom_minimum_size = Vector2(320, 220)
layout_mode = 2

[node name="PvContainer" type="SubViewportContainer" parent="Card/Margin/VBox/PreviewWrap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="Pv" type="SubViewport" parent="Card/Margin/VBox/PreviewWrap/PvContainer"]
handle_input_locally = false
size = Vector2i(320, 220)
render_target_update_mode = 4

[node name="Stars" type="HBoxContainer" parent="Card/Margin/VBox/PreviewWrap"]
custom_minimum_size = Vector2(196, 64)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_right = 98.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PlayWrap" type="CenterContainer" parent="Card/Margin/VBox"]
custom_minimum_size = Vector2(256, 96)
layout_mode = 2

[node name="Play" type="Button" parent="Card/Margin/VBox/PlayWrap"]
clip_contents = true
layout_mode = 2
icon = ExtResource("1_w8aqe")
flat = true
alignment = 2
icon_alignment = 1
